--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-react": "^6.24.1",
     "lodash": "^4.17.4",
+    "node-fetch": "^1.7.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
