--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
+    "react-dnd": "^2.4.0",
+    "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.11"
+    "react-dropzone": "^4.1.0",
+    "react-scripts": "1.0.11",
+    "react-spinners": "^0.0.30"
   },
   "scripts": {
     "start": "react-scripts start",
