--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint-config-airbnb": "^15.1.0",
     "react": "^15.6.1",
     "react-dnd": "^2.4.0",
     "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.1.0",
     "react-scripts": "1.0.11",
-    "react-spinners": "^0.0.30"
+    "react-spinners": "^0.0.30",
+    "sha512": "^0.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
