--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,6 +1,18 @@
 {
   "extends": "airbnb",
   "rules": {
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "jsx-a11y/href-no-hash": "off",
+    "jsx-a11y/anchor-is-valid": [
+      "warn",
+      {
+        "aspects": [
+          "invalidHref"
+        ]
+      }
+    ]
+  },
+  "env": {
+    "browser": true
   }
 }
