--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dnd": "^2.4.0",
     "react-dnd-html5-backend": "^2.4.1",
     "react-dom": "^15.6.1",
     "react-dropzone": "^4.1.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.11",
     "react-spinners": "^0.0.30",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "sha512": "^0.0.1"
   },
   "scripts": {
