--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "eslint-config-airbnb-base": "^11.3.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.3.0"
+    "eslint-plugin-react": "^7.3.0",
+    "react-social-icons": "^2.7.0"
   }
 }
