--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "firebase": "^4.5.0",
+    "lodash": "^4.17.4",
+    "merge": "^1.2.0",
     "react": "^16.0.0",
     "react-dnd": "^2.5.3",
     "react-dnd-html5-backend": "^2.5.3",
